# batch-learn

./: CMakeLists.txt  README.md
include/: batch_learn.hpp
python/: setup.py
python/batch_learn/: __init__.py  writer.pyx
src/: batch-learn.cpp  command.hpp  convert-command.cpp  ffm-command.hpp  ffm-model.cpp  model-command.cpp  model-command.hpp  model-helpers.hpp  nn-command.hpp  nn-helpers.hpp  nn-model.cpp
src/commands/: convert.cpp  convert.hpp  ffm.hpp  model.cpp  model.hpp  nn.hpp
src/models/: ffm.cpp  ffm.hpp  model.hpp  nn.cpp  nn.hpp
src/util/: common.hpp  dataset.hpp
